# CodeMate

./: #pyproject.toml  .dockerignore  .editorconfig  .env.development  .env.example  .env.production  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README copy.md  README.md  STRUCTURE_map.ps1  cli_CodeMate.bat  core-base.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  fix copy.py  fix.py  install_CodeMate.bat  open_CodeMate.bat  pyproject.toml  pytest.ini  root.py  run_tests.py  run_tests.sh  settings.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
cmate/: __init__.py  __main__.py
cmate/core/: agent_coordinator copy.py  agent_coordinator.py  context_manager.py  dependency_analyzer.py  event_bus.py  memory_manager.py  navigation_executor.py  navigation_system.py  prompt_manager.py  state_manager.py  workflow_manager.py
cmate/file_services/: file_watcher.py  workspace_analyzer.py  workspace_scanner.py
config/: default.yaml  development.yaml  gunicorn.py  local.yaml  production.yaml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod
docs/: Docs.md  dir.md  directory.md
logs/: __init__.py  test_run_20250212_212149.html
requirements/: base.txt  dev.txt  prod.txt
scripts/: deploy.sh  setup.py
src/: config.py  main.py
tests/: conftest.py  test_agent_end_to_end.py  test_backend_validator.py  test_cache_manager.py  test_checklist_manager.py  test_config.py  test_decision_system.py  test_error_handler.py  test_event_bus.py  test_file_watcher.py  test_frontend_validator.py  test_implementation.py  test_implementation_validator.py  test_llm_integration.py  test_log_analyzer.py  test_logger.py  test_memory_manager.py  test_navigation.py  test_persistence_manager.py  test_process_manager.py  test_progress_tracker.py  test_prompt_templates.py  test_request_handler.py  test_response_formatter.py  test_state_manager.py  test_state_prompts.py  test_system_metrics.py  test_task_prioritizer.py  test_terminal_manager.py  test_test_manager.py  test_test_validation.py  test_token_counter.py  test_validation_rules.py  test_workflow_manager.py  test_workspace_scanner.py
(+267 files in other folders)
